Refactor of BoardShapeSelector